# cloudcafe

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
assets/: desktop_blit.sks  mouse.glb  room.glb
cloudcafe-client/: Cargo.toml  build.rs
cloudcafe-client/assets/: bottom_base.glb  desktop.hlsl  desktop.hlsl.sks  mouse.glb  resize_cursor.glb  second_top_base.glb  start_menu.hlsl  start_menu.hlsl.sks  top_base.glb  top_base_2.glb
cloudcafe-client/src/: asset_loader.rs  gamma_shader.rs  input.rs  main.rs  run_menu.rs  simple_wm.rs  sk_env.rs  values.rs  window_management.rs  window_management_2.rs  windows.rs  windows2.rs  world.rs
cloudcafe-client/src/internal_os/: internal_mouse.rs  internal_window.rs  mod.rs
cloudcafe-client/src/service/: mod.rs  mouse_window.rs  powershell_scripts.rs
cloudcafe-client/src/virtual_manager/: desktop_capture.rs  mod.rs  virtual_mouse.rs  virtual_window.rs
cloudcafe-client/src/windows_bindings/: mod.rs
cloudcafe-server/: Cargo.toml
installer/: cloudcafe.nsi
