[package]
name = "cloudcafe-common"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["cloudcafe-server", "cloudcafe-client", "cloudcafe-driver-installer"]

[workspace.dependencies]
laminar = "0.5.0"
uuid = "1.3.0"
rand = "0.8.5"

[dependencies]
