[package]
name = "cloudcafe-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stereokit = { path = "../../stereokit-rs"}
glam = { version = "0.23.0", features = ["mint"]}
mint = "0.5.9"
color-eyre = "0.6.2"
coord_transforms = "1.4.0"
lerp = "0.4.0"
dxcapture = { path = "../../dxcapture"}
winput = {version = "0.2.5", features = ["message_loop"]}
crossbeam = "0.8.2"
willhook = "0.6.1"
bitflags = "1.3.2"
scilib = "0.7.0"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
timer = "0.2.0"
chrono = "0.4.24"
runas = "1.0.0"
powershell_script = "1.0.4"
#named_pipe = "0.4.1"
native-dialog = "0.6.3"
#ipipe = "0.11.7"
interprocess = "1.2.1"
sysinfo = "0.28.3"
nng = "1.0.1"
bincode = "1.3.3"
serde = {version = "1.0.157", features = ["derive"]}
[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi"
]